@@ -14,6 +14,8 @@
 #    You should have received a copy of the GNU General Public License
 #    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
+export LANG=C
+
 testdir="tests"
 tests="installation bad bugs good util"
 
